--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "next": "^15.0.2",
+    "next-translate": "^2.6.2",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "styled-jsx-plugin-sass": "^1.0.0",
     "tailwindcss": "^3.4.13"
+  },
+  "devDependencies": {
+    "next-translate-plugin": "^2.6.2"
   }
 }
