--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "export": "next export"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.4.0",
+    "@vercel/speed-insights": "^1.1.0",
     "autoprefixer": "^10.4.20",
     "next": "^15.0.2",
     "postcss": "^8.4.47",
